[package]
name = "bx402"
version = "0.1.0"
edition = "2024"
description = "Micropayment proxy for the Brave Search API over x402 and MPP"
license = "MPL-2.0"
publish = false

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }

[dependencies]
axum = "0.8"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
dotenvy = "0.15"
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
x402-types = "1.5.5"
x402-chain-eip155 = { version = "1.5.5", features = ["server"] }
x402-axum = "1.5.5"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
wiremock = "0.6"
