[package]
name = "bx402"
version = "0.1.0"
edition = "2024"
description = "Micropayment proxy for the Brave Search API over x402 and MPP"
license = "MPL-2.0"
publish = false

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }

[dependencies]
axum = "0.8"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
dotenvy = "0.15"
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
x402-types = "2.0.0"
x402-chain-eip155 = { version = "2.0.0", features = ["server"] }
x402-axum = "2.0.0"
# Default features pull a vulnerable TLS stack (rustls-webpki 0.101.7). We opt out and
# enable only what we need: default-https-client for HTTPS, rt-tokio for the runtime.
aws-sdk-s3 = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
# Defaults are fine here: aws-config already uses the modern default-https-client, not the
# legacy rustls connector, so no vulnerable TLS stack.
aws-config = "1"
base64 = "0.22"

[dev-dependencies]
http-body-util = "=0.1.3"
tower = { version = "=0.5.3", features = ["util"] }
wiremock = "=0.6.5"
